Se cambio el formato de la imagenes a Webp y se avanzo en la pagina de compras

--- a/Paginas/CrearCuenta.html
+++ b/Paginas/CrearCuenta.html
@@ -12,7 +12,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
+      <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.webp" class="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -21,8 +21,8 @@
           <li class="nav-item"><a class="nav-link" href="planesyservicios.html">Planes y servicios</a></li>
           <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
           <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
-          <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.png" class="imgNav"></a></li>
-          <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
+          <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.webp" class="imgNav"></a></li>
+          <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.webp" class="imgNav"></a></li>
         </ul>
       </div>
     </div>
@@ -43,6 +43,6 @@
     </div>
   
     <div class="login-image">
-      <img src="../Img/login.png" alt="Imagen gimnasio">
+      <img src="../Img/login.webp" alt="Imagen gimnasio">
     </div>
   </div>
