--- a/Paginas/planesyservicios.html
+++ b/Paginas/planesyservicios.html
@@ -13,7 +13,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
+        <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.webp" class="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,8 +22,8 @@
                 <li class="nav-item"><a class="nav-link" href="">Planes y servicios</a></li>
                 <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
                 <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
-                <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.png" class="imgNav"></a></li>
-                <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
+                <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.webp" class="imgNav"></a></li>
+                <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.webp" class="imgNav"></a></li>
             </ul>
         </div>
     </div>
@@ -73,21 +73,21 @@
     <h2 class="titulo-servicios">¡Conoce nuestros servicios!</h2>
     
     <div class="servicio">
-      <div class="servicio-img" style="background-image: url('../Img/EntrenamientoPersonalizado.png');">
+      <div class="servicio-img" style="background-image: url('../Img/EntrenamientoPersonalizado.webp');">
         <h3>Entrenamiento<br>Personalizado</h3>
       </div>
       <p>Planes de entrenamiento adaptados a cada cliente con seguimiento mensual, evaluación de progreso y ajustes para garantizar resultados óptimos. Ideal para pérdida de peso, ganancia muscular o mejora del rendimiento.</p>
     </div>
   
     <div class="servicio">
-      <div class="servicio-img" style="background-image: url('../Img/Alimentacion.png');">
+      <div class="servicio-img" style="background-image: url('../Img/Alimentacion.webp');">
         <h3>Nutrición y<br>Suplementación</h3>
       </div>
       <p>Asesoría en alimentación con planes personalizados según los objetivos del cliente. Incluye recomendaciones de suplementos y talleres sobre hábitos saludables para maximizar el rendimiento físico.</p>
     </div>
   
     <div class="servicio">
-      <div class="servicio-img" style="background-image: url('../Img/clases.png');">
+      <div class="servicio-img" style="background-image: url('../Img/clases.webp');">
         <h3>Clases Grupales</h3>
       </div>
       <p >Entrenamientos dinámicos en grupo, como HIIT, Cross Training y Powerlifting, además de bootcamps intensivos de 4-6 semanas con retos progresivos para mantener la motivación y mejorar el rendimiento.</p>
@@ -102,17 +102,17 @@
   
   <div class="tarjetas">
     <div class="tarjeta">
-      <img class="tarjetaC" src="../Img/debito.png">
+      <img class="tarjetaC" src="../Img/debito.webp">
       <p>Débito</p>
     </div>
     <div class="tarjeta2">
-      <img class="tarjetaD" src="../Img/credito.png">
+      <img class="tarjetaD" src="../Img/credito.webp">
       <p>Crédito</p>
     </div>
   </div>
 <br><br><br><br><br><br><br><br>
   <div class="whatsapp">
-    <img src="../Img/Whatsapp.png" >
+    <img src="../Img/Whatsapp.webp" >
     <p>¡Si tienes dudas<br>no dudes en contactarnos!</p>
   </div>
 </section>
@@ -122,9 +122,9 @@
   <footer>
     <h2>SÍGUENOS</h2>
     <div>
-      <a href=""><img src="../Img/insta.png">Instagram</a>
-      <a href=""><img src="../Img/tiktok.png">TikTok</a>
-      <a href=""><img src="../Img/youtube.png">YouTube</a>
+      <a href=""><img src="../Img/insta.webp">Instagram</a>
+      <a href=""><img src="../Img/tiktok.webp">TikTok</a>
+      <a href=""><img src="../Img/youtube.webp">YouTube</a>
     </div>
     <h5 class="footerderechos">©2025 Abyss Forge Gym. Todos los derechos reservados.</h5>
   </footer>
