--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
 <!-- Header menu Section -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href=""><img src="Img/Abyss.png" class="logo"></a>
+            <a class="navbar-brand" href=""><img src="Img/Abyss.webp" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,15 +22,15 @@
                     <li class="nav-item"><a class="nav-link" href="Paginas/planesyservicios.html">Planes y servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="Paginas/productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="Paginas/entrenadores.html">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Paginas/compras.html"><img src="Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="Paginas/iniciosesion.html"><img src="Img/perfil.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/compras.html"><img src="Img/carrito.webp" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="Paginas/iniciosesion.html"><img src="Img/perfil.webp" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <header>
         <div class="position-relative">
-            <img src="Img/principal.png" class="imgPrincipal">
+            <img src="Img/principal.webp" class="imgPrincipal">
             <div class="position-absolute top-50 start-50 translate-middle text-center">
                 <h1 class="TituloPrincipal"><b>ABYSS FORGE GYM</b></h1>
                 <p class="textoPrincipal"> <br>No temas al abismo... <br> forja tu fuerza en la oscuridad, resurge como leyenda <br><br></p>
@@ -52,16 +52,16 @@
                 </div>
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="Img/GymFoto1.png" class="d-block w-100">
+                    <img src="Img/GymFoto1.webp" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="Img/GymFoto2.png" class="d-block w-100">
+                    <img src="Img/GymFoto2.webp" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="Img/WheyFoto3.png" class="d-block w-100">
+                    <img src="Img/WheyFoto3.webp" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                    <img src="Img/ComidaFoto4.png" class="d-block w-100">
+                    <img src="Img/ComidaFoto4.webp" class="d-block w-100">
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -92,7 +92,7 @@
         
                 <div class="col-md-6">
                     <div class="image-container">
-                        <img class="conoceRemo" src="Img/GymRemo.png">
+                        <img class="conoceRemo" src="Img/GymRemo.webp">
                     </div>
                 </div>
             </div>
@@ -102,9 +102,9 @@
     <footer>
         <h2 class="siguenos">SÍGUENOS</h2>
             <div>
-                <a href=""><img src="Img/insta.png">Instagram</a>
-                <a href=""><img src="Img/tiktok.png">TikTok</a>
-                <a href=""><img src="Img/youtube.png">YouTube</a>
+                <a href=""><img src="Img/insta.webp">Instagram</a>
+                <a href=""><img src="Img/tiktok.webp">TikTok</a>
+                <a href=""><img src="Img/youtube.webp">YouTube</a>
             </div>
         <p class="textoPrincipal">©2025 Abyss Forge Gym. All rights reserved.</p>
     </footer>
