--- a/Paginas/compras.html
+++ b/Paginas/compras.html
@@ -1,30 +1,144 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="../Img/Abyss.png">
+    <title>Abyss Forge Gym</title>
+    <link rel="shortcut icon" href="Img/Abyss.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet"  href="../Css/Compras.Css">
     <link rel="stylesheet" href="../Css/BarraNavYfooter.Css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto align-items-center">
-                    <li class="nav-item"><a class="nav-link" href="planesyservicios.html">Planes y servicios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><img src="../Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="perfil.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
-                </ul>
-            </div>
+
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.webp" class="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto align-items-center">
+                <li class="nav-item"><a class="nav-link" href="planesyservicios.html">Planes y servicios</a></li>
+                <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
+                <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
+                <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.webp" class="imgNav"></a></li>
+                <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.webp" class="imgNav"></a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
+
+  <!-- Titulo -->
+  <header class="header-title">
+    <h1 class="Titulo"><b>Tu carro de compras</b></h1>
+  </header>
+
+  <div class="container my-5">
+
+    <!-- tipo plan 1 -->
+    <div class="d-flex justify-content-between align-items-center bg-dark text-white rounded p-3 mb-3 producto">
+      <div class="d-flex align-items-center">
+        <img src="" class="imagen-item">
+        <div>
+          <h5 class="mb-1">Plan: Abyss Entry</h5>
+          <div class="d-flex align-items-center">
+            <button class="btn btn-outline-light btn-sm me-2">-</button>
+            <span>1</span>
+            <button class="btn btn-outline-light btn-sm ms-2">+</button>
+          </div>
+        </div>
+      </div>
+      <div class="text-end">
+        <h4>$60.000</h4>
+        <button class="btn-close btn-close-white"></button>
+      </div>
+    </div>
+  
+    <!-- Item 1 -->
+    <div class="d-flex justify-content-between align-items-center bg-dark text-white rounded p-3 mb-3 producto">
+      <div class="d-flex align-items-center">
+        <img src="../Img/Proteina.webp" class="imagen-item">
+        <div>
+          <h5 class="mb-1">Proteína</h5>
+          <div class="d-flex align-items-center">
+            <button class="btn btn-outline-light btn-sm me-2">-</button>
+            <span>1</span>
+            <button class="btn btn-outline-light btn-sm ms-2">+</button>
+          </div>
+        </div>
+      </div>
+      <div class="text-end">
+        <h4>$----</h4>
+        <button class="btn-close btn-close-white"></button>
+      </div>
+    </div>
+  
+    <!-- Item 3 -->
+    <div class="d-flex justify-content-between align-items-center bg-dark text-white rounded p-3 mb-3 producto">
+      <div class="d-flex align-items-center">
+        <img src="../Img/Creatinaxd.webp" class="imagen-item">
+        <div>
+          <h5 class="mb-1">Creatina</h5>
+          <div class="d-flex align-items-center">
+            <button class="btn btn-outline-light btn-sm me-2">-</button>
+            <span>1</span>
+            <button class="btn btn-outline-light btn-sm ms-2">+</button>
+          </div>
+        </div>
+      </div>
+      <div class="text-end">
+        <h4>$----</h4>
+        <button class="btn-close btn-close-white"></button>
+      </div>
+    </div>
+  
+    <!-- Item 4 -->
+    <div class="d-flex justify-content-between align-items-center bg-dark text-white rounded p-3 mb-4 producto">
+      <div class="d-flex align-items-center">
+        <img src="../Img/pre-entreno.webp" class="imagen-item">
+        <div>
+          <h5 class="mb-1">Pre-entreno</h5>
+          <div class="d-flex align-items-center">
+            <button class="btn btn-outline-light btn-sm me-2">-</button>
+            <span>1</span>
+            <button class="btn btn-outline-light btn-sm ms-2">+</button>
+          </div>
+        </div>
+      </div>
+      <div >
+        <h4>$----</h4>
+        <button class="btn-close btn-close-white"></button>
+      </div>
+    </div>
+  
+    <!-- Subtotal y Pago -->
+    <div class="d-flex justify-content-between align-items-center bg-dark text-white rounded p-3 subtotal">
+      <h5>Subtotal:</h5>
+      <h5>$----</h5>
+    </div>
+  
+    <div class="text-center mt-3">
+      <button class="btn btn-warning w-100 pagar">¡Paga aquí!</button>
+    </div>
+  
+  </div>
+
     
+</body>  
+
+
+   <!-- Footer -->
+  <footer>
+    <h2>SÍGUENOS</h2>
+    <div>
+      <a href=""><img src="../Img/insta.webp">Instagram</a>
+      <a href=""><img src="../Img/tiktok.webp">TikTok</a>
+      <a href=""><img src="../Img/youtube.webp">YouTube</a>
+    </div>
+    <h5 class="footerderechos">©2025 Abyss Forge Gym. Todos los derechos reservados.</h5>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
