--- a/Paginas/entrenadores.html
+++ b/Paginas/entrenadores.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
+            <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.webp" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,8 +21,8 @@
                     <li class="nav-item"><a class="nav-link" href="planesyservicios.html">Planes y servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#carrito"><img src="../Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="#carrito"><img src="../Img/carrito.webp" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.webp" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
@@ -35,21 +35,21 @@
                 <div class="col-md-4 TextoCompacto">
                     <h3 class="nombreCoach coachesAline">Javier</h3>
                     <p class="subtitloCoach">Coach de Fuerza y Musculación.</p>
-                    <img src="../Img/Javier.png" class="coachesImg">
+                    <img src="../Img/Javier.webp" class="coachesImg">
                     <p class="textoPrincipal">Especialista en entrenamiento de pesas, hipertrofia y levantamiento de fuerza. Diseña rutinas para maximizar el rendimiento, mejorar la técnica y prevenir lesiones.</p>
                 </div>
         
                 <div class="col-md-4 TextoCompacto">
                     <h3 class="nombreCoach">Santiago</h3>
                     <p class="subtitloCoach">Coach de Entrenamiento Funcional y HIIT.</p>
-                    <img src="../Img/Santiago.png" class="coachesImg">
+                    <img src="../Img/Santiago.webp" class="coachesImg">
                     <p class="textoPrincipal">Experto en circuitos de alta intensidad, movilidad y resistencia. Ideal para quienes buscan quemar grasa, mejorar su condición física y ganar agilidad en entrenamientos dinámicos.</p>
                 </div>
         
                 <div class="col-md-4 TextoCompacto">
                     <h3 class="nombreCoach coachesAline">Valeria</h3>
                     <p class="subtitloCoach">Coach de Nutrición y Bienestar.</p>
-                    <img src="../Img/Valeria.png" class="coachesImg">
+                    <img src="../Img/Valeria.webp" class="coachesImg">
                     <p class="textoPrincipal">Enfocado en hábitos saludables, planificación de alimentación y suplementación. Ayuda a los clientes a optimizar su rendimiento con una nutrición adecuada para sus objetivos.</p>
                 </div>
             </div>
@@ -62,7 +62,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6 TextoCompacto row">
                     <h3 class="nombreCoach">Javier</h3>
-                        <img src="../Img/JavierHorario.png" class="coachesImgHorario">
+                        <img src="../Img/JavierHorario.webp" class="coachesImgHorario">
                     <p class="textoPrincipal">
                         ¡Contacta al coach para agendar
                         tu sesión o resolver dudas!
@@ -101,7 +101,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-6 TextoCompacto row">
                         <h3 class="nombreCoach">Santiago</h3>
-                            <img src="../Img/SantiagoHorario.png" class="coachesImgHorario">
+                            <img src="../Img/SantiagoHorario.webp" class="coachesImgHorario">
                         <p class="textoPrincipal">
                             ¡Contacta al coach para agendar
                             tu sesión o resolver dudas!
@@ -141,7 +141,7 @@
                     <div class="row align-items-center">
                         <div class="col-md-6 TextoCompacto row">
                             <h3 class="nombreCoach">Valeria</h3>
-                                <img src="../Img/ValeriaHorario.png" class="coachesImgHorario">
+                                <img src="../Img/ValeriaHorario.webp" class="coachesImgHorario">
                             <p class="textoPrincipal">
                                 ¡Contacta al coach para agendar
                                 tu sesión o resolver dudas!
@@ -180,9 +180,9 @@
     <footer>
         <h2 class="siguenos">SÍGUENOS</h2>
             <div>
-                <a href=""><img src="../Img/insta.png">Instagram</a>
-                <a href=""><img src="../Img/tiktok.png">TikTok</a>
-                <a href=""><img src="../Img/youtube.png">YouTube</a>
+                <a href=""><img src="../Img/insta.webp">Instagram</a>
+                <a href=""><img src="../Img/tiktok.webp">TikTok</a>
+                <a href=""><img src="../Img/youtube.webp">YouTube</a>
             </div>
         <p class="textoPrincipal">©2025 Abyss Forge Gym. All rights reserved.</p>
     </footer>
