--- a/Paginas/perfil.html
+++ b/Paginas/perfil.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
+            <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.webp" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -21,20 +21,20 @@
                     <li class="nav-item"><a class="nav-link" href="planesyservicios.html">Planes y servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href=""><img src="../Img/perfil.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.webp" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href=""><img src="../Img/perfil.webp" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <section class="imagen-gimnasio">
-      <img src="../Img/fondo_perfil.png" alt="Gimnasio" />
+      <img src="../Img/fondo_perfil.webp" alt="Gimnasio" />
     </section>
     <section class="seccion-usuario">
     <div class="usuario-contenedor">
       <div class="avatar-usuario">
-        <img src="../Img/foto_perfil.png" alt="Usuario" />
+        <img src="../Img/foto_perfil.webp" alt="Usuario" />
         <h2>Usuario</h2>
     </div>
     <div class="info-plan">
@@ -55,9 +55,9 @@
 <footer>
     <h2>SÍGUENOS</h2>
         <div>
-            <a href=""><img src="../Img/insta.png">Instagram</a>
-            <a href=""><img src="../Img/tiktok.png">TikTok</a>
-            <a href=""><img src="../Img/youtube.png">YouTube</a>
+            <a href=""><img src="../Img/insta.webp">Instagram</a>
+            <a href=""><img src="../Img/tiktok.webp">TikTok</a>
+            <a href=""><img src="../Img/youtube.webp">YouTube</a>
         </div>
     <h5>©2025 Abyss Forge Gym. Todos los derechos reservados.</h5>
 </footer>
