--- a/Paginas/productos.html
+++ b/Paginas/productos.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.png" class="logo"></a>
+            <a class="navbar-brand" href="../Index.html"><img src="../Img/Abyss.webp" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,8 +22,8 @@
                     <li class="nav-item"><a class="nav-link" href="planesyservicios.html">Planes y servicios</a></li>
                     <li class="nav-item"><a class="nav-link" href="">Productos</a></li>
                     <li class="nav-item"><a class="nav-link" href="entrenadores.html">Entrenadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.png" class="imgNav"></a></li>
-                    <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.png" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="compras.html"><img src="../Img/carrito.webp" class="imgNav"></a></li>
+                    <li class="nav-item"><a class="nav-link" href="iniciosesion.html"><img src="../Img/perfil.webp" class="imgNav"></a></li>
                 </ul>
             </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="product-image-container position-relative mb-4 mb-md-0 me-md-5">
           <div class="background-layer"></div>
             <div class="image-layer">
-              <img src="../Img/Proteina.png" class="img-fluid" alt="Proteína">
+              <img src="../Img/Proteina.webp" class="img-fluid" alt="Proteína">
       </div>
       </div>
       <div class="product-info text-white">
@@ -76,7 +76,7 @@
             <div class="contenedor-imagen">
               <div class="fondo-amarillo"></div>
               <div class="imagen-creatina">
-                <img src="../Img/Creatinaxd.png" alt="Creatina">
+                <img src="../Img/Creatinaxd.webp" alt="Creatina">
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
         <div class="product-image-container position-relative mb-4 mb-md-0 me-md-5">
           <div class="background-layer"></div>
             <div class="image-layer">
-              <img src="../Img/pre-entreno.png" class="img-fluid" alt="Proteína">
+              <img src="../Img/pre-entreno.webp" class="img-fluid" alt="Proteína">
       </div>
       </div>
       <div class="product-info text-white">
@@ -109,9 +109,9 @@
     <footer>
         <h2>SÍGUENOS</h2>
             <div>
-                <a href=""><img src="../Img/insta.png">Instagram</a>
-                <a href=""><img src="../Img/tiktok.png">TikTok</a>
-                <a href=""><img src="../Img/youtube.png">YouTube</a>
+                <a href=""><img src="../Img/insta.webp">Instagram</a>
+                <a href=""><img src="../Img/tiktok.webp">TikTok</a>
+                <a href=""><img src="../Img/youtube.webp">YouTube</a>
             </div>
         <h5>©2025 Abyss Forge Gym. Todos los derechos reservados.</h5>
     </footer>
