se hicieron los comentarios y se arreglaron detallitos

--- a/Paginas/planesyservicios.html
+++ b/Paginas/planesyservicios.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Planes</title>
-  <link rel="shortcut icon" href="../Img/Abyss.png">
+  <link rel="shortcut icon" href="../Img/Abyss.webp">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../Css/EstructuraPags.Css">
   <link rel="stylesheet" href="../Css/PlanesStyle.css">
@@ -44,7 +44,7 @@
         <small class="tiempo">Mensual</small>
         <div class="price"> <span class="signopesos">$</span><span class="valor">60.000</span></div>
         <p class="info">Adéntrate en la fragua del abismo y enciende la chispa de tu transformación. Este plan es ideal para quienes inician su camino en el entrenamiento, con acceso a las áreas esenciales del gimnasio y equipamiento básico. ¿Listo para enfrentar tu primera prueba?</p>
-        <button class="btn btn-custom">Comprar</button>
+        <a href="compras.html" class="btn btn-custom">Comprar</a>
       </div>
 
       <!-- Plan 2 -->
@@ -53,7 +53,7 @@
         <small class="tiempo">Trimestral</small>
         <div class="price"> <span class="signopesos">$</span><span class="valor">150.000</span></div>
         <p class="info">El fuego del abismo endurece a los guerreros más decididos. Con este plan, accedes a entrenamientos avanzados, áreas especializadas y asesoramiento para potenciar tu fuerza y resistencia. Aquí es donde el hierro se convierte en acero.</p>
-        <button class="btn btn-custom">Comprar</button>
+        <a href="compras.html" class="btn btn-custom">Comprar</a>
       </div>
 
       <!-- Plan 3 -->
@@ -62,7 +62,7 @@
         <small class="tiempo">Anual</small>
         <div class="price"> <span class="signopesos">$</span><span class="valor">630.000</span></div>
         <p class="info">Para quienes buscan la dominación absoluta, este es el nivel supremo. Acceso total a todas las áreas, entrenadores de élite, rutinas personalizadas y beneficios exclusivos. Aquí, el fuego no destruye, te transforma en un ser imparable..</p>
-        <button class="btn btn-custom">Comprar</button>
+        <a href="compras.html" class="btn btn-custom">Comprar</a>
       </div>
 
     </div>
