--- a/Index.html
+++ b/Index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abyss Forge Gym</title>
-    <link rel="shortcut icon" href="Img/Abyss.png">
+    <link rel="shortcut icon" href="Img/Abyss.webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="Css/EstructuraPags.Css">
     <link rel="stylesheet" href="Css/PagPrincipal.css">
 </head>
 <body>
-<!-- Header menu Section -->
+<!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href=""><img src="Img/Abyss.webp" class="logo"></a>
@@ -28,8 +28,10 @@
             </div>
         </div>
     </nav>
+
+    <!--Header pantalla principal-->
     <header>
-        <div class="position-relative">
+        <div class="position-relative">     <!--Header pantalla principal-->
             <img src="Img/principal.webp" class="imgPrincipal">
             <div class="position-absolute top-50 start-50 translate-middle text-center">
                 <h1 class="TituloPrincipal"><b>ABYSS FORGE GYM</b></h1>
@@ -39,9 +41,11 @@
         </div>
     </header>
 
+    <!--Seccion imagenes Gym-->
     <section class="bgOscuro">
         <h1 class="tituloSecPrincipal">Nuestro gimnasio</h1>
         <br>
+                <!--Carrusel con bootstrap-->
         <div class="d-flex justify-content-center">
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
@@ -50,16 +54,20 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
                 </div>
-                <div class="carousel-inner">
+            <div class="carousel-inner">
+                <!--Imagen 1 del carrusel-->
                 <div class="carousel-item active">
                     <img src="Img/GymFoto1.webp" class="d-block w-100">
                 </div>
+                <!--Imagen 2 del carrusel-->
                 <div class="carousel-item">
                     <img src="Img/GymFoto2.webp" class="d-block w-100">
                 </div>
+                <!--Imagen 3 del carrusel-->
                 <div class="carousel-item">
                     <img src="Img/WheyFoto3.webp" class="d-block w-100">
                 </div>
+                <!--Imagen 4 del carrusel-->
                 <div class="carousel-item">
                     <img src="Img/ComidaFoto4.webp" class="d-block w-100">
                 </div>
@@ -77,6 +85,7 @@
         <br>
     </section>
 
+    <!--Seccion conoce nuestros planes-->
     <section>
         <div class="container">
             <div class="row align-items-center">
@@ -86,19 +95,21 @@
                         <p class="textoPrincipal">Encuentra todos los detalles que los diferentes planes de nuestro gimnasio pueden ofrecerte, ¡anímate a conocer nuestras ofertas!</p>
                         <br>
                         <br>   
-                        <a href="Paginas/planesyservicios.html" class="btn">Planes y servicios</a>
+                        <a href="Paginas/planesyservicios.html" class="btn btn-Secundario">Planes y servicios</a>
                     </div>
                 </div>
         
                 <div class="col-md-6">
                     <div class="image-container">
-                        <img class="conoceRemo" src="Img/GymRemo.webp">
+                        <img class="conoceRemo img-fluid" src="Img/GymRemo.webp"> <!--img-fluid para responsive-->
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
+
+    <!-- Footer -->
     <footer>
         <h2 class="siguenos">SÍGUENOS</h2>
             <div>
