--- a/Paginas/perfil.html
+++ b/Paginas/perfil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfiles</title>
-    <link rel="shortcut icon" href="../Img/Abyss.png">
+    <link rel="shortcut icon" href="../Img/Abyss.webp">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../Css/EstructuraPags.Css">
     <link rel="stylesheet" href="../Css/perfil.css">
@@ -51,6 +51,7 @@
       </div>
     </div>
   </section>
+  
   
 <footer>
     <h2>SÍGUENOS</h2>
